--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/teams55-logo.png" />
+    <link class="bg-white rounded-xl" rel="icon" type="image/png" href="./src/assets/teams55-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Team S55</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
